cambios realizados para poner una tercer pagina consumiendo una API

--- a/formulario.html
+++ b/formulario.html
@@ -58,6 +58,14 @@
             <p class="warnings" id="warnings"></p>
         </div>
     </form>
+    <a href="./index.html">Prev</a>
+    <a href="./tercer-pagina.html">Next</a>
 
     </section>
 </body>
+
+<footer>
+    <p class="footer-content ejemplo">
+        ArtWEB &copy; Todos los derechos reservados 2023
+    </p>
+</footer>
